<resources>
    <string name="app_name">Admin Car Buddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_splash_name">Car Buddy</string>
    <string name="google_map_api_key">AIzaSyDmwh69uHo142cSDoI77NNvndzrYFYNSEc</string>

    //Sign in Sign Up
    <string name="string_email">Email</string>
    <string name="string_hint_email">example.josh@example.com</string>
    <string name="string_password">Password</string>
    <string name="string_forgot_password">Forgot Password?</string>
    <string name="string_sign_up">Sign Up</string>
    <string name="string_remember_me">Remember me</string>
    <string name="string_create_account">Create your\nAccount</string>
    <string name="string_or_continue_with">Or continue with</string>
    <string name="string_signIn">Sign In</string>
    <string name="string_or">OR</string>
    <string name="string_login_to_your_account">Login to your\nAccount</string>
    <string name="string_no_email_error">Please enter email</string>
    <string name="string_no_password_error">Please enter password</string>

    //Account setup
    <string name="string_fill_your_profile">Fill your Profile</string>
    <string name="string_full_name">Full Name</string>
    <string name="string_nick_name">Nick Name (Optional)</string>
    <string name="string_date_of_birth">Date of Birth</string>
    <string name="string_phone_number">Phone Number</string>
    <string name="string_address">Address</string>
    <string name="string_continue">Continue</string>
    <string name="string_menu_home">Home</string>
    <string name="string_menu_inbox">Inbox</string>
    <string name="string_menu_profile">Profile</string>
    <string name="string_menu_booking">Booking</string>


    <string name="default_web_client_id" />
    <string name="orders">Orders</string>
</resources>